k8s/monitoring/chrony-daemonset.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ntp
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: chrony
  namespace: ntp
  labels:
    app: chrony
spec:
  selector:
    matchLabels:
      app: chrony
  template:
    metadata:
      labels:
        app: chrony
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - marmoset
      containers:
      - name: chrony
        image: dockurr/chrony:latest
        securityContext:
          capabilities:
            add:
            - SYS_TIME
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
      tolerations:
      - effect: NoSchedule
        operator: Exists
