k8s/monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
  labels:
    app: grafana
    component: monitoring
    portfolio: "true"
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: grafana
